# Projeto-final-back-end-ebac

./: .env.docker  .gitignore  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
Frontend/: Projeto.js  index.html  style.css
Tests/: test_database.py  test_endpoint.py
app/: main.py
database/: db.py  modelos.py
routes/: pokeapi.py  user_poke.py
