[project]
name = "projeto-final"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "requests (>=2.34.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "redis (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
